--- a/index.html
+++ b/index.html
@@ -11,43 +11,61 @@
 
     <!-- Initial Introduction, photo and clickable links that follow -->
     <div class="flexbox-container-header">
-        <div style="font-size:1.5vw;">Andre Besner's Professional Portfolio</div>
-        <div class="push">About Me</div>
-        <div>Projects</div>
-        <div>Contact me</div>
+        <h1>Andre Besner's Professional Portfolio</h1 >
+        <h2 class="push">About Me</h2>
+        <h2>Projects</h2>
+        <h2>Contact me</h2>
     </div>
 
     <p></p>
 
     <!-- This is going to be first about me flex boxes -->
     <div class="flexbox-container-body">
-        <h3 class="flebox">
+        <h3 class="flebox" style="margin-right: 30px;">
             About me
         </h3>
-        <div class="flebox push">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto natus autem voluptatibus dolorem culpa laudantium ut neque deleniti quo rerum amet, atque sapiente ratione eaque excepturi sit beatae asperiores consectetur?
+        <div class="bodybox push">
+            Hello There! My name is Andre Besner. I am currently in automotive sales. I am taking this coding bootcamp course as a personal development goal. I had worked in IT for years before moving to sales. I have also taken some traditional Computer Science Coding courses several years ago. I am currently comfortable with Java, and learning HTML and CSS.
+
+            Thank you so much for taking the time to check out my Professional Portfolio!
         </div>
-    </div>
+    </div> 
+    <!-- end of about me section  -->
+
+
 
     <!-- This is going to be Work Flexboxes -->
     <div class="flexbox-container-body">
-        <h3 class="flebox">
+        <h3 class="flebox" style="margin-right: 30px">
             Projects
         </h3>
-        <div class="flebox push">
+        <div class="bodybox push">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto natus autem voluptatibus dolorem culpa laudantium ut neque deleniti quo rerum amet, atque sapiente ratione eaque excepturi sit beatae asperiores consectetur?
         </div>
+        <div class="bodybox push">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
+        </div>
     </div>
+    <!-- end of work section -->
 
-    <!-- This is the about me -->
+
+
+    <!-- This is the contact me -->
     <div class="flexbox-container-body">
-        <h3 class="flebox">
-            About me
+        <h3 class="flebox" style="margin-right: 30px">
+            Contact Me
         </h3>
-        <div class="flebox push">
+        <div class="bodybox push">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto natus autem voluptatibus dolorem culpa laudantium ut neque deleniti quo rerum amet, atque sapiente ratione eaque excepturi sit beatae asperiores consectetur?
         </div>
+        <div class="bodybox push">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
+        </div>
+        <div class="bodybox push">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
+        </div>
     </div>
+    <!-- end of contact me -->
 
 </body>
 </html>
