add images, overhaul classes, made more bugs

--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
         <h3 class="flebox" style="margin-right: 30px">
             Projects
         </h3>
-        <div class="bodybox push">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto natus autem voluptatibus dolorem culpa laudantium ut neque deleniti quo rerum amet, atque sapiente ratione eaque excepturi sit beatae asperiores consectetur?
-        </div>
-        <div class="bodybox push">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
-        </div>
+        <div class="push"></div>
+        <img src="./Assets/Images/Calculator.jpg"alt="Picture of calculator">
+        <img src="./Assets/Images/Weather.png" alt="picture of lightning">
+        <img src="./Assets/Images/Puzzle.jpg" alt="picture of puzzle set">
     </div>
     <!-- end of work section -->
 
