complete overhaul of code, initial commit

--- a/index.html
+++ b/index.html
@@ -1,69 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Assets/style.css">
     <title>Andre Besner's Professional Portfolio</title>
 </head>
 <body>
 
-    <!-- Initial Introduction, photo and clickable links that follow -->
-    <div class="flexbox-container-header">
-        <h1>Andre Besner's Professional Portfolio</h1 >
-        <h2 class="push">About Me</h2>
-        <h2>Projects</h2>
-        <h2>Contact me</h2>
-    </div>
-
-    <p></p>
-
-    <!-- This is going to be first about me flex boxes -->
-    <div class="flexbox-container-body">
-        <h3 class="flebox" style="margin-right: 30px;">
-            About me
-        </h3>
-        <div class="bodybox push">
-            Hello There! My name is Andre Besner. I am currently in automotive sales. I am taking this coding bootcamp course as a personal development goal. I had worked in IT for years before moving to sales. I have also taken some traditional Computer Science Coding courses several years ago. I am currently comfortable with Java, and learning HTML and CSS.
-
-            Thank you so much for taking the time to check out my Professional Portfolio!
-        </div>
-    </div> 
-    <!-- end of about me section  -->
-
-
-
-    <!-- This is going to be Work Flexboxes -->
-    <div class="flexbox-container-body">
-        <h3 class="flebox" style="margin-right: 30px">
-            Projects
-        </h3>
-        <div class="push"></div>
-        <img src="./Assets/Images/Calculator.jpg"alt="Picture of calculator">
-        <img src="./Assets/Images/Weather.png" alt="picture of lightning">
-        <img src="./Assets/Images/Puzzle.jpg" alt="picture of puzzle set">
-    </div>
-    <!-- end of work section -->
-
-
-
-    <!-- This is the contact me -->
-    <div class="flexbox-container-body">
-        <h3 class="flebox" style="margin-right: 30px">
-            Contact Me
-        </h3>
-        <div class="bodybox push">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto natus autem voluptatibus dolorem culpa laudantium ut neque deleniti quo rerum amet, atque sapiente ratione eaque excepturi sit beatae asperiores consectetur?
-        </div>
-        <div class="bodybox push">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
-        </div>
-        <div class="bodybox push">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam illo, nulla odit eius suscipit sed dolor nihil aliquam omnis, quos reiciendis commodi culpa adipisci. Commodi itaque asperiores maiores? Pariatur, exercitationem.
-        </div>
-    </div>
-    <!-- end of contact me -->
-
+    <!-- Header Portion -->
+    <header class="header-container">
+        <h1>Andre Besner's Professional Portfolio</h1>
+        <a class="header-container-box" href="">About Me</a>
+        <a class="header-container-box" href="">Projects</a>
+        <a class="header-container-box" href="">Contact Me</a>
+    </header>
+    <!-- End of Header Portion -->
 </body>
 </html>
