add html, add css, made header, started projects section

--- a/index.html
+++ b/index.html
@@ -17,5 +17,16 @@
         <a class="header-container-box" href="">Contact Me</a>
     </header>
     <!-- End of Header Portion -->
+
+
+    <!-- Projects Portion -->
+    <div class="projects-container">
+        <div class="left-bar-projects">Projects</div>
+        <a href=""><img class="projects-first" src="./Assets/Images/Calculator.jpg"></a>
+        <a href=""><img class="projects" src="./Assets/Images/Puzzle.jpg"></a>
+        <a href=""><img class="projects" src="./Assets/Images/Weather.png"></a>
+    </div>
+    <!-- End of Projects Portion -->
+
 </body>
 </html>
