remove all project content, fix header

--- a/index.html
+++ b/index.html
@@ -12,21 +12,33 @@
     <!-- Header Portion -->
     <header class="header-container">
         <h1>Andre Besner's Professional Portfolio</h1>
-        <a class="header-container-box" href="">About Me</a>
-        <a class="header-container-box" href="">Projects</a>
-        <a class="header-container-box" href="">Contact Me</a>
+        <div class="quick-link-box">
+            <a class="header-container-box" href="">About Me // </a>
+            <a class="header-container-box" href="">Projects // </a>
+            <a class="header-container-box" href="">Contact Me </a>
+        </div>    
     </header>
     <!-- End of Header Portion -->
 
 
+    <!-- About Me Portion -->
+    
+
+    <!-- End of About Me Portion -->
+
+
     <!-- Projects Portion -->
-    <div class="projects-container">
-        <div class="left-bar-projects">Projects</div>
-        <a href=""><img class="projects-first" src="./Assets/Images/Calculator.jpg"></a>
-        <a href=""><img class="projects" src="./Assets/Images/Puzzle.jpg"></a>
-        <a href=""><img class="projects" src="./Assets/Images/Weather.png"></a>
-    </div>
+    
     <!-- End of Projects Portion -->
 
+
+    <!-- Start of Contact Me Section -->
+
+    <!-- End of Contact Me Section -->
+
+
+    <!-- Footer -->
+
+    <!-- End of Footer -->
 </body>
 </html>
