set root vartiable values for font sizes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
 
     <!-- About Me Portion -->
-    
+    <div class="main-content-section">
+        <h2>About Me</h2>
+    </div>
 
     <!-- End of About Me Portion -->
 
