add content about me contact me

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <!-- About Me Portion -->
     <div class="main-content-section">
         <h2>About Me</h2>
+        <div class="body-element">
+            Hello There! My name is Andre Besner. I am currently in automotive sales. I am taking this coding bootcamp course as a personal development goal. I had worked in IT for years before moving to sales. I have also taken some traditional Computer Science Coding courses several years ago. I am currently comfortable with Java, and learning HTML and CSS.
+
+            Thank you so much for taking the time to check out my Professional Portfolio!
+        </div>
     </div>
 
     <!-- End of About Me Portion -->
@@ -35,7 +40,19 @@
 
 
     <!-- Start of Contact Me Section -->
+    <div class="main-content-section">
+        <h2>Contact Me</h2>
+        <div class="body-element">
+            <a href="mailto:besner.andre@gmail.com">E-MAIL ADDRESS</a>
+        </div>
+        <div class="body-element">
+            <a href="https://github.com/AndreBesner/professional-portfolio">GITHUB REPO</a>
 
+        </div>
+        <div class="body-element" style="text-decoration: underline;">
+            Phone: (905) 697 2333 x114
+        </div>
+    </div>
     <!-- End of Contact Me Section -->
 
 
