add image to header, make responsive, clean up main sections, make responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Header Portion -->
     <header class="header-container">
         <h1>Andre Besner's Professional Portfolio</h1>
+        <img class="avatar" src="./Assets/Images/forschool.png" alt="">
         <div class="quick-link-box">
             <a class="header-container-box" href="">About Me // </a>
             <a class="header-container-box" href="">Projects // </a>
@@ -24,6 +25,7 @@
     <!-- About Me Portion -->
     <div class="main-content-section">
         <h2>About Me</h2>
+        
         <div class="body-element">
             Hello There! My name is Andre Besner. I am currently in automotive sales. I am taking this coding bootcamp course as a personal development goal. I had worked in IT for years before moving to sales. I have also taken some traditional Computer Science Coding courses several years ago. I am currently comfortable with Java, and learning HTML and CSS.
 
