--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>Andre Besner's Professional Portfolio</h1>
         <img class="avatar" src="./Assets/Images/forschool.png" alt="">
         <div class="quick-link-box">
-            <a class="header-container-box" href="">About Me // </a>
-            <a class="header-container-box" href="">Projects // </a>
-            <a class="header-container-box" href="">Contact Me </a>
+            <a class="header-container-box" href="#about-me">About Me // </a>
+            <a class="header-container-box" href="#projects">Projects // </a>
+            <a class="header-container-box" href="#contact-me">Contact Me </a>
         </div>    
     </header>
     <!-- End of Header Portion -->
@@ -24,7 +24,7 @@
 
     <!-- About Me Portion -->
     <div class="main-content-section">
-        <h2>About Me</h2>
+        <h2 id="about-me">About Me</h2>
         
         <div class="body-element">
             Hello There! My name is Andre Besner. I am currently in automotive sales. I am taking this coding bootcamp course as a personal development goal. I had worked in IT for years before moving to sales. I have also taken some traditional Computer Science Coding courses several years ago. I am currently comfortable with Java, and learning HTML and CSS.
@@ -37,13 +37,15 @@
 
 
     <!-- Projects Portion -->
-    
+    <div class="main-content-section">
+        <h2 id="projects">Projects</h2>
+    </div>
     <!-- End of Projects Portion -->
 
 
     <!-- Start of Contact Me Section -->
     <div class="main-content-section">
-        <h2>Contact Me</h2>
+        <h2 id="contact-me">Contact Me</h2>
         <div class="body-element">
             <a href="mailto:besner.andre@gmail.com">E-MAIL ADDRESS</a>
         </div>
