add project section skeleton

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
     <!-- Projects Portion -->
     <div class="main-content-section">
         <h2 id="projects">Projects</h2>
+        <div class="project-flexbox">
+            <a href="">
+                <img class="main-project-image" src="./Assets/Images/Calculator.jpg" alt="">
+            </a>
+            <a href="">
+                <img class="project-image" src="./Assets/Images/Puzzle.jpg" alt="">
+            </a>
+            <a href="">
+                <img class="project-image" src="./Assets/Images/Weather.png" alt="">
+            </a>
+        </div>
     </div>
     <!-- End of Projects Portion -->
 
